# mcuboot

./: mcuboot_关键代码解析.md
boot/boot_serial/src/: boot_serial.c
boot/bootutil/: CMakeLists.txt
boot/bootutil/include/bootutil/: bootutil_public.h  image.h
boot/bootutil/rtthread/: bootutil_flash.c
boot/bootutil/src/: bootutil_priv.h  bootutil_public.c  image_validate.c  loader.c  swap_misc.c  swap_move.c  tlv.c
boot/bootutil/src/flash_map_backend/: flash_map_backend.h
boot/bootutil/src/mcuboot_config/: mcuboot_config.h  mcuboot_logging.h
boot/bootutil/src/sysflash/: sysflash.h
boot/zephyr/: CMakeLists.txt  Kconfig  flash_map_extended.c  main.c  serial_adapter.c  single_loader.c
docs/: imgtool.md  signed_images.md
